--- a/index.html
+++ b/index.html
@@ -337,6 +337,29 @@
                 </div>
             </div>
         </section>
+        <section id="testimonial">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="common_heading">
+                            <h2>Testimonial</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="top">
+                            <img src="./image/Beatles (1).png" alt="">
+                            <h3>Shahin Alom</h3>
+                            <h5>Chairman</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div class="bottom"></div>
+                    </div>
+                    <div class="col-6"></div>
+                </div>
+            </div>
+        </section>
     </body>
     <footer>
 
